--- a/posts/2020-09-05.md
+++ b/posts/2020-09-05.md
@@ -242,7 +242,7 @@ The differential dataflow `Reduce` operator groups `(key, val)` records by `key`
 This operator requires an arrangement of its input, and produces an arrangement of its output.
 Each use of this operator in the dataflow graph will require these two arrangements.
 
-The `Reduce` expression may multiple aggregations, each of which may have the `distinct` modifier.
+The `Reduce` expression may create multiple aggregations, each of which may have the `distinct` modifier.
 Each of these aggregations may be rendered to independent dataflows, to avoid combinatorial explosion.
 When the `distinct` modifier is present a differential dataflow `Reduce` operator is created for that purpose.
 Operators like `min` and `max` may be turned in to a sequence of differential `Reduce` operators for performance reasons.
@@ -256,7 +256,7 @@ Each of the operators in this sequence must maintain an arrangement for its inpu
 
 ### Threshold expressions
 
-Materialize's `Threshold` expression is applied to collection that may have negative accumulations to ensure all accumulations are non-negative.
+Materialize's `Threshold` expression is applied to a collection that may have negative accumulations to ensure all accumulations are non-negative.
 It uses a differential dataflow `Reduce` operator to do this, and so arranges its input and its output.
 
 ## Diagnosing Arrangement Use.
@@ -270,7 +270,8 @@ materialize=> select * from mz_arrangement_sizes;
 ```
 At the moment, this returns
 ```
-materialize=> select * from mz_arrangement_sizes order by operator; operator | worker | records | batches
+materialize=> select * from mz_arrangement_sizes order by operator;
+ operator | worker | records | batches
 ----------+--------+---------+---------
       201 |      0 |       0 |       1
       212 |      0 |      24 |       2
@@ -363,6 +364,7 @@ First, I'll create two tables to act as sources of data.
 materialize=> create table transaction (id int, amount int, source int, target int);
 materialize=> create table account (id int, country int);
 ```
+<!-- Consider making this SQL copy-paste friendly (i.e., remove the `materialize->` prefixes). -->
 Now, we create a materialized view for our query
 ```sql
 materialize=> create materialized view transfers as
