--- a/posts/2020-09-05.md
+++ b/posts/2020-09-05.md
@@ -33,6 +33,12 @@ materialize> explain plan for <your select query>;
 This will present the expression structure that would be rendered as dataflow.
 The expressions announced in such a plan will directly lead to maintained arrangements.
 
+Materialize produces lots of statistics about the number of "records" it maintains.
+You may be more interested in understanding the amount of memory (in bytes) that it uses.
+For technical reasons, it is much easier for Materialize to maintain "records" than "bytes".
+If you think of each record in a collection having some "average size", you can use records to tell you about bytes.
+This isn't perfect, but it is the tool we have at the moment!
+
 ## What are "arrangements"?
 
 You can think of an arrangement as the streaming analogue of an "index" from a relational database.
@@ -256,7 +262,12 @@ Each of the operators in this sequence must maintain an arrangement for its inpu
 
 ### Threshold expressions
 
-Materialize's `Threshold` expression is applied to collection that may have negative accumulations to ensure all accumulations are non-negative.
+Materialize's `Threshold` expression ensures that all records have a non-negative count.
+In a system like Materialize, that communicates *changes*, one can create sequences of changes that drive a count negative.
+For example, to implement `EXCEPT ALL` you could subtract the second collection from the first.
+However, any records present in the second collection more often than in the first would show up as negative records in the result.
+The `Threshold` operator prevents this from happening.
+
 It uses a differential dataflow `Reduce` operator to do this, and so arranges its input and its output.
 
 ## Diagnosing Arrangement Use.
@@ -420,16 +431,15 @@ It turns out, these are three arrangements for the join (one arrangement can be 
 
 Materialize will happily use the memory you instruct it to use, as you supply it with queries and data.
 In many cases it has techniques it can apply to reduce the memory footprint, but it may also need your help.
-Let's talk through a few examples where you can reframe the query to reduce the amount of memory required.
-
-### Inspect query plans
 
 Materialize's `explain plan for <query>` command will report how your query would be implemented.
 These plans are one of the first places to look if your query uses more resources than you expect.
-In particular, see if you can recognize your original query structure in the plans, and identify the role of each stateful expression.
-For each stateful expression, determine if you believe the accumulated input should be reasonable (the implementation will maintain this accumulated input).
+In particular, see if you can recognize your original query structure in the plans, and identify the role of each expression that requires arrangements.
+For each such expression, determine if you believe the amount of arranged data should be reasonable.
 
 If any of these steps fail, it may be important to reframe your query (and perhaps file bugs against Materialize's query planning).
+Let's talk through a few examples where you can reframe the query to reduce the amount of memory required.
+
 
 ### Simplifying Queries
 
