--- a/posts/2020-09-24.md
+++ b/posts/2020-09-24.md
@@ -1,16 +1,15 @@
 # Materialize under the Hood
 
 Today we will take a bit of a tour of the moving parts that make up Materialize.
-This tour isn't meant to be exhaustive, but rather to show off some of the moments where things might be different from what you expect, and to give you a sense for why Materialize is relatively better at maintaining SQL queries over changing data.
-
+This tour isn't meant to be exhaustive, but rather to show off some of the moments where things might be different from what you expect, and to give you a sense for why Materialize is relatively better at maintaining SQL queries over changing data. In particular, how it provides interactive access to up-to-date data, how it does this using fewer resources than you might expect, and how it is operationally simpler than other approaches.
 
 ## In Broad Strokes
 
 Let's start with some broad strokes that name the moving parts of the system.
 
-[PICTURE]
+![An overview of the Materialize architecture](https://github.com/frankmcsherry/blog/blob/master/assets/mz_overview/overview.png)
 
-Users interact with Materialize primarily through a `pgwire`-esque **external interface**, with commands that create, query, and remove data sources, views, and materializations.
+Users interact with Materialize primarily through a `pgwire`-esque **external interface**, with SQL commands that create, query, and remove data sources, views, and materializations.
 These commands make their way to the **coordinator**, whose job it is to track the metadata about these sources, views, and materializations, and to communicate with the dataflow layer about what it should be doing next.
 The **dataflow layer** is responsible for the execution and maintenance of the views the coordinator provides it.
 
@@ -61,22 +60,75 @@ We will explain what these are, and connect the dots to maintaining SQL queries 
 
 In timely dataflow, multiple worker threads cooperate to execution and maintain multiple dataflows.
 Each worker thread knows about all dataflows, and can perform the logic for any of the operators; the routing of data to individual workers determines where the work actually occurs and where state is held.
-This is a departure from many big data systems, which isolate the execution of each operator.
+This is different from many big data systems, which isolate each operator on its own thread or computer.
 
-This departure is intentional. First, the design decouples the complexity of your queries from the complexity of your deployment. You can maintain hundreds of queries on a single machine, and scale up to more machines only when you want to. Second, the design allows our worker threads to share worker-local state and computation across dataflows. This brings the database concept of a shared index to the world of streaming computation, and with it interactive analysis of always fresh data.
+---
 
-[PICTURE]
+**Key Concept 1** Materialize's design decouples the complexity of your queries from the complexity of your deployment. You can maintain hundreds of queries on a single machine, and scale up to more machines only when you want to.
 
-A dataflow computation describes what should happen in response to the arrival of more data. In our case, the "data" will be **updates** to the underlying collections. Updates enter the system from data "sources", and flow forward through operators that implement traditional data-parallel logic: operators like `map`, `filter`, `join`, and `reduce`. Each of these operators are implemented to respond to input updates with the correct corresponding output updates: those that change the output to always reflect the correct answer for the accumulated input. Chaining these operators one after another results in a larger dataflow that maintains a more complex computation: one that can correspond to a SQL query!
+---
 
-[PICTURE]
+When multiple workers cooperate on a computation, particularly a fast-moving computation, they run the risk of introducing chaos.
+Traditional mechanisms from databases, regular locking and coordination between the threads, negatively impact scalability and throughput.
+Traditional mechanisms from streaming systems isolate the units of work to be done, which limits the ability to share resources across dataflows.
+In materialize, we want to provide both scalability and economy, and need to use clearer coordination mechanisms.
 
-All updates in Materialize bear a *logical timestamp*, an unambiguous indication of when the update takes place. All operators preserve this logical timestamp, and thereby maintain a consistent view of the results. Query results are never out of sync with one another, even though their execution is asynchronous and across multiple parallel workers. The logical timemstamps ensure that the results can be correctly collated before they are presented to users.
+All updates in Materialize bear a *logical timestamp*, an unambiguous indication of when the update "takes place".
+This timestamp could be the wall-clock time, or it could be a transaction identifier from your database; you can choose its meaning.
+All operators preserve this logical timestamp in their output, and thereby maintain a consistent view of the results.
+Query results are always correct with respect to this timestamp, and never out of sync with one another, even though their execution is asynchronous and across multiple parallel workers.
 
-Some of these dataflow operators require *state*. For example, to respond to new updates the `join` operator needs access to the *history* of its input updates: each new update may match arbitrary records in the other input. In fact, the state needed by many operators is just an indexed representation of their input data.
+---
 
-In a relational setting, across dataflows many operators ultimately need the *same* state. Each time you join in a collection by its primary key, your dataflow could use that collection arranged by that key. Across all of your queries, there are often relatively fewer distinct ways data are used than there are uses of it. Shared arrangements are the mechanism that allows the operators to share the same in-memory state, even as its contents change. They are what make Materialize especially well-suited to maintain relational SQL queries over continually changing collections of data.
+**Key Concept 2** Logical timestamps allow Materialize to provide deterministic, always consistent query results, without requiring fine-grained coordination between workers, nor isolation between their work items.
+
+---
+
+
+Timely dataflow's design allows our worker threads to share worker-local state and computation across dataflows.
+This brings the database concept of a shared index to the world of streaming computation, and with it interactive analysis of always fresh data.
+Let's see any example of how that works.
+
+![An example Materialize dataflow](https://github.com/frankmcsherry/blog/blob/master/assets/mz_overview/dataflow.png)
+
+In this example dataflow, taken from our overview up above, there is a collection `totals` that is defined by a query that joins two inputs and aggregates up the results.
+The result is an in-memory materialization of the results, a "shared arrangement", boxed above in orange.
+This materialization is indexed by whatever key was used for the aggregation, the SQL `GROUP BY` keys perhaps, and it is continually maintained as its input data change.
+Like a database index, the materialization provides random access to its data, and can dramatically improve the performance of new queries that would have to reprocess their inputs in other systems.
+
+If we want to use it in a new query, it is all ready to go *without* needing to reprocess any of its inputs.
+You can get immediate random access to it, and set up new dataflows that depend on it without rebuilding it for each dataflow.
+
+![An example Materialize dataflow with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/mz_overview/sharing.png)
+
+This new dataflow is built using the in-memory shared arrangement, rather than re-reading (or worse, re-computing) the `totals` collection.
+We also re-use the work done to maintain the arrangement as the underlying data change.
+Any number of queries can re-use the same arrangement, and the cost of each query is determined only by the *new* work it introduces.
+
+---
+
+**Key Concept 3** Materializing results in shared arrangements provides the low query latency and resource efficiency of relational database indexes, while retaining the scalable architecture of data-parallel dataflow systems.
+
+---
+
+There is certainly a lot going on in Materialize, but these three concepts stuck out to me as the basis for why you might expect something different here.
+They enable a qualitatively different data analysis experience, with fast queries, fast updates, all at the scale that is appropriate for you.
+
+## Limitations
+
+It is reasonable to wonder what Materialize's limitations might be, given its several advantages.
+Informally, a system like Materialize that shares maintained state optimizes for this use case more than for other use cases.
+Computations that do not need to *maintain* their results might be better implemented by *polling* a more traditional data processor, performing work only when asked.
+Computations that do not need (or expect) to *share* state might better execute each query *de novo* using the fastest possible technology for reading data (e.g. columnar stores).
+We've put our effort in to the use case we think is most underserved, efficiently maintaining big data computations, and that comes at the expense of not building something else.
+
+That being said, we've had a great reaction from users who report that Materialize's combination of interactive, and always up to date analysis match both their needs and expectations.
+We've got enough new stuff going on here that we are pretty comfortable being candid about the limitations, so [take it for a spin](https://materialize.io/download/) and tell us what you think!
 
 ## In Conclusion
 
-Materialize is a system designed to maintain relational queries over continually changing data. It has several specific advantages over other systems that make it better suited to this task. Specifically, Materialize is well-equiped to maintain indexed representations of collections of data as they change, and to leverage these indexes in maintaining queries over relational data.
+Materialize is a system designed to maintain relational queries over continually changing data.
+It has several specific advantages over other systems that make it better suited to this task.
+Specifically, Materialize is well-equiped to maintain indexed representations of collections of data as they change, and to leverage these indexes in maintaining queries over relational data.
+It blends the benefits of relational database indexes with the scalability and performance of stream processors.
+All of this, with a familiar SQL front-end that works the way you would expect it to work.
