--- a/posts/2020-09-24.md
+++ b/posts/2020-09-24.md
@@ -9,7 +9,7 @@ Let's start with some broad strokes that name the moving parts of the system.
 
 ![An overview of the Materialize architecture](https://github.com/frankmcsherry/blog/blob/master/assets/mz_overview/overview.png)
 
-Users interact with Materialize primarily through a `pgwire`-esque **external interface**, with SQL commands that create, query, and remove data sources, views, and materializations.
+Users interact with Materialize primarily through a `pgwire`-esque **front end**, with SQL commands that create, query, and remove data sources, views, and materializations.
 These commands make their way to the **coordinator**, whose job it is to track the metadata about these sources, views, and materializations, and to communicate with the dataflow layer about what it should be doing next.
 The **dataflow layer** is responsible for the execution and maintenance of the views the coordinator provides it.
 
@@ -17,9 +17,9 @@ We'll dive in to each of these in increasing detail.
 Mostly, they are increasingly different from existing infrastructure, and so there is more that needs to be said as we go deeper down.
 I'm also more familiar with the deeper down stuff myself; we'll need to get some other folks to explain
 
-## External Interfaces
+## Front end
 
-We have intentionally aimed to make Materialize's external interfaces as *uninteresting* as possible.
+We have intentionally aimed to make Materialize's user interfaces as *uninteresting* as possible.
 The more conventional these interfaces, the more existing tools and use cases can directly connect to Materialize and get moving, without new SDKs or programming effort.
 You can use [`psql`](https://www.postgresql.org/docs/9.2/app-psql.html) to directly connect to Materialize, or BI tools like [Metabase](https://www.metabase.com) for an enriched experience.
 From the outside, we want Materialize to look and feel like the database you and your data infrastructure expect.
@@ -30,7 +30,7 @@ Your session will pass your commands along to **the coordinator**, who determine
 
 ## The Coordinator
 
-Just behind the external interfaces lives the coordinator, the brains of Materialize.
+Just behind the user interfaces lives the coordinator, the brains of Materialize.
 This is where we track information about the sources of data you (and other users) have installed, views you have created over them, and the materializations we maintain for you.
 Here we parse, plan, and optimize your SQL queries, and when appropriate instruct the dataflow layer to spin up a new computation to execute and maintain their results.
 The coordinator also tracks the state of materializations, and ensures that we take advantage of them when planning how to answer and maintain new queries.
