--- a/posts/2020-11-18.md
+++ b/posts/2020-11-18.md
@@ -6,6 +6,9 @@ Joins also happen to be one of the harder things to do both correctly and effici
 
 Let's walk through the ways that Materialize maintains queries containing joins!
 
+In particular, we'll see increasingly sophisticated join planning techniques, starting from what a conventional dataflow system might do, and moving up through joins that can introduce nearly zero per-query overhead.
+Each of the new join plans we work through represent an implementation strategy that Materialize can do that other dataflow systems will struggle to replicate.
+
 ## Introducing Joins
 
 Let's take a super-simple example of an "equi-join":
@@ -28,7 +31,7 @@ Although we didn't write the word `JOIN`, that is what happens in SQL when you u
 
 Most dataflow systems will plan this join using a relatively simple dataflow graph:
 
-![Dataflow graph for join]()
+![Dataflow graph for join](https://github.com/frankmcsherry/blog/blob/master/assets/joins/figure0.png)
 
 Information about the `customer` and `location` collections flows in along their respective edges.
 For example, when records are added, removed, or updated, that information flows as data along an edge.
@@ -49,7 +52,7 @@ Materialize will do things slightly differently, in a way that can be substantia
 
 Materialize plans joins using a slightly different dataflow plan:
 
-![Dataflow graph for join in Materialize]()
+![Dataflow graph for join in Materialize](https://github.com/frankmcsherry/blog/blob/master/assets/joins/figure1.png)
 
 We have broken the traditional `join` operator into three parts.
 Each of the inputs first visits an `arrange` operator, whose results then go to a `join_core` operator.
@@ -70,7 +73,7 @@ Joins using primary keys are effectively "look-ups" and are quite common.
 Each such look-up would be a join using `location.zip` and would require the same index.
 We can bulid the index once, and re-use it across all of the query dataflows that need it.
 
-![Dataflow graph for join in Materialize]()
+![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/figure2.png)
 
 We would still need a private copy of `customer` indexed by `zip`, but as we will see next there are standard clever idioms from databases that can make this efficient as well.
 
@@ -144,7 +147,7 @@ To my eyes, this makes the intent of the query a bit clearer.
 We'll be using the scale-factor 1 dataset, as it what I have locally and it is good enough to call out some of the trade-offs.
 You can mentally multiple the numbers we'll see by various powers of ten, and the same conclusions will hold.
 
-### A first implementation
+### Joins in Materialize: A first implementation
 
 We can turn on `materialize` and frame the query above, using the `CREATE MATERIALIZED VIEW ..` syntax.
 This instructs `materialize` to spin up a dataflow to read and maintain the results of the query.
@@ -189,6 +192,10 @@ materialize=>
 
 At the same time, maintaining this query comes with a cost.
 The dataflow that maintains `query_03` maintains several indexes over input and intermediate data.
+Here is a sketch of what the dataflow graph looks like for the query deployed against the raw data.
+
+![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch0.png)
+
 We can read out these volumes from `materialize`'s logging views.
 To read out the total records maintained by each dataflow, we would type
 
@@ -248,7 +255,11 @@ In this case, they are all primary keys.
 
 We can rebuild our dataflow for `query_03` with these indexes in place.
 Materialize is able to plan the dataflows based on the available indexes, and may find better plans which maintain less private state.
-For example, if we re-run our diagnostic query, the one that counts the records maintained by dataflow, we see
+The new dataflow graph will looks like so
+
+![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch1.png)
+
+If we re-run our diagnostic query, the one that counts the records maintained by dataflow, we see
 
 ```
       id  |                         name                          |   sum
@@ -260,6 +271,7 @@ For example, if we re-run our diagnostic query, the one that counts the records 
       607 | Dataflow: materialize.public.pk_part                  |  200000
       490 | Dataflow: materialize.public.pk_customer              |  150000
       724 | Dataflow: materialize.public.pk_supplier              |   10000
+      ...
 ```
 
 There are a few things to notice here.
@@ -287,7 +299,11 @@ Let's try that now.
 materialize=> CREATE INDEX fk_lineitem_orderkey ON lineitem (l_orderkey);
 ```
 
-If we re-build the query dataflow, and re-pull the statistics on records maintained, we see
+Rebuildirg the query results in a dataflow that looks like so
+
+![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch2.png)
+
+If we re-pull the statistics on records maintained, we see
 
 ```
      id  |                         name                          |   sum
@@ -300,6 +316,7 @@ If we re-build the query dataflow, and re-pull the statistics on records maintai
 -->  829 | Dataflow: materialize.public.query_03_primary_idx     |  174571
      529 | Dataflow: materialize.public.pk_customer              |  150000
      763 | Dataflow: materialize.public.pk_supplier              |   10000
+     ...
  ```
 
 The `query_03` dataflow is now substantially smaller.
@@ -365,6 +382,7 @@ But, let's see what happens when we re-build `query_03`, and re-pull its record 
 -->  2543 | Dataflow: materialize.public.query_03_primary_idx     |   23240
       724 | Dataflow: materialize.public.pk_supplier              |   10000
      2516 | Dataflow: materialize.public.fk_supplier_nationkey    |   10000
+      ...
 ```
 
 As you can see, we have a whole lot of other indexes in there with large record counts.
@@ -395,6 +413,87 @@ This would be terrible for a conventional dataflow system that cannot share arra
 For Materialize, as long as there are few enough *distinct* arrangements, the cost can be much lower.
 Materialize considers this plan only if all the necessary arrangement already exist, in which case the *additional* cost of the join is zero.
 
+![Dataflow graph for join in Materialize with sharing](https://github.com/frankmcsherry/blog/blob/master/assets/joins/tpch3.png)
+
 You might reasonably be hesitant about the outlay of arranged data required to enable delta queries.
 We now have five copies of `lineitem` to maintain, and it is not the smallest collection of data.
 However, the per-query cost is now substantially reduced, and a quite-large number of analysts can each work with a quite large number of queries without exhausting `materialize`.
+
+### Joins in Materialize: Late Materialization
+
+For some recently landing bonus content, let's talk about how expensive the five arrangements of `lineitem` are.
+
+Each of these arrangements replicates the full contents of `lineitem`.
+That is clearly a lot of data, and a lot of redundancy.
+In a conventional dataflow system this overhead is expected; the `join` operator needs to keep whatever state it needs.
+But what happens in a relational database?
+
+Indexes in a relational database don't often replicate the entire collection of data.
+Rather, they often maintain just a mapping from the indexed columns back to a primary key.
+These few columns can take substantially less space than the whole collection, and may change less as various unrelated attributes are updated.
+
+Can we do the same thing in Materialize? Yes!
+
+If we are brave enough to rewrite our query just a little bit, we can write the same join in a way that does not require multiple arrangements of `lineitem`.
+The trick will be to define and use a few views that pair foreign and primary keys, and build mulitple indexes only on them.
+
+In our case, we only use foreign keys from `orders` and `lineitem`, and so we'll just build those views and indexes.
+More generally, you would build one of these triplets for each foreign key in a collection, mapping it back to a primary key.
+
+```sql
+-- Create a view containing `l_orderkey` and `lineitem`'s primary key.
+CREATE VIEW lineitem_fk_orderkey AS SELECT l_orderkey, l_linenumber FROM lineitem;
+CREATE INDEX lineitem_fk_orderkey_0 ON lineitem_fk_orderkey (l_orderkey, l_linenumber);
+CREATE INDEX lineitem_fk_orderkey_1 ON lineitem_fk_orderkey (l_orderkey);
+-- Create a view containing `o_custkey` and `orders`'s primary key.
+CREATE VIEW orders_fk_custkey AS SELECT o_orderkey, o_custkey FROM orders;
+CREATE INDEX orders_fk_custkey_0 on orders_key_custkey (o_orderkey);
+CREATE INDEX orders_fk_custkey_1 on orders_key_custkey (o_custkey);
+```
+
+With these new "narrow" views, we can rewrite `query_03` to use the narrow views to perform the core equijoin logic.
+We then join their primary keys back to the `orders` and `lineitem` collections, indexed only by their primary keys.
+
+```sql
+SELECT
+    o_orderkey,
+    o_orderdate,
+    o_shippriority,
+    sum(l_extendedprice * (1 - l_discount)) AS revenue
+FROM
+    customer c,
+    orders o,
+    lineitem l,
+    -- NEW: "narrow" collections containing just keys.
+    lineitem_fk_orderkey l_ok,
+    orders_fk_custkey o_ck
+WHERE
+    -- core equijoin constraints using "narrow" collections.
+    c_custkey = o_ck.o_custkey
+    AND l_ok.l_orderkey = o_orderkey
+    -- connect narrow and wide collections.
+    AND l_ok.l_orderkey = l.orderkey
+    AND l_ok.l_linenumber = l.linenumber
+    AND o_ck.orderkey = o.orderkey
+    -- constraints on values from wide collections.
+    AND c_mktsegment = 'BUILDING'
+    AND o.o_orderdate < DATE '1995-03-15'
+    AND l.l_shipdate > DATE '1995-03-15'
+GROUP BY
+    o_orderkey,
+    o_orderdate,
+    o_shippriority;
+```
+
+What happens now in join planning is that "delta query" planning still kicks in.
+We have all of the necessary arrangements at hand to avoid maintaining intermediate state.
+The difference is that we only ever use one arrangement for each of the "wide" relations.
+The relations that must be multiply arranged are narrow relations who's rows can be substanially smaller.
+
+## Conclusions
+
+Joins are a pretty interesting beast in Materialize.
+
+Our use of shared arrangements means gives us access to efficient join plans that conventional dataflow systems cannot support.
+These join plans can **substantially** reduce the per-query resource requirements for relational queries.
+
